mi-tercer-commit

--- a/index.html
+++ b/index.html
@@ -11,16 +11,27 @@
 </head>
 <body>
     <header>
-        <div class="navegacion">
-            <ul class="grid menu">
-                <li><h3>Florida Eventos</h3></li>
-                <li><a class="barra" href="">Inicio</a></li> 
-                <li><a class="barra" href="#nosotros">Nosotros</a></li>
-                <li><a class="barra" href="#eventos">Eventos</a></li>
-                <li><a class="barra" href="#galeria">Galeria</a></li>
-                <li><a class="barra" href="#contacto">Contacto</a></li>
-            </ul>
+
+        <div class="container-fluid">
+            <nav class="navbar fixed-top navbar-expand-md navbar-light bg-light border-3 border-bottom">
+                <div class="container-fluid">
+                    <a href="#" class="navbar-brand">Florida Eventos</a>
+                    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div id="MenuNavegacion" class=" collapse navbar-collapse">
+                        <ul class="navbar-nav ms-3">
+                            <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#nosotros">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#eventos">Eventos</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
+
     </header>
         
     <main class="main-portada">
@@ -66,7 +77,7 @@
     </div>
 
     <div class="container">
-        <h2 id="contacto">Contacto</h2>
+        <h2 id="contacto">CONTACTO</h2>
         <h4>Completa el formulario y nos comunicaremos a la brevedad</h4>
         <div class="row w-50">
             <div class="col">
