--- a/index.html
+++ b/index.html
@@ -64,17 +64,49 @@
         </div>
     </div>
 
-    <div>
-        <h2 class="img-titulo" id="galeria">GALERIA</h2>
-        <div class="grid galeria">
-            <img src="./img/galeria_1.jpg" width="100%">
-            <img src="./img/galeria_2.jpg" width="100%">
-            <img src="./img/galeria_3.jpg" width="100%">
-            <img src="./img/galeria_4.jpg" width="100%">
-            <img src="./img/galeria_5.jpg" width="100%">
-            <img src="./img/galeria_12.jpg" width="100%">
+    <div class="galeria-de-fotos">
+        <h2 id="galeria">GALERIA</h2>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/galeria_1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/galeria_2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/galeria_3.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/galeria_4.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/galeria_5.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/galeria_6.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/galeria_7.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/galeria_8.jpeg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/galeria_9.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/galeria_10" class="d-block w-100" alt="...">
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
         </div>
-    </div>
 
     <div class="container">
         <h2 id="contacto">CONTACTO</h2>
