--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
     <main class="main-portada">
         <div class="portada">
-            <img class="portada-imagen" src="./img/fotoevento2.jpeg" alt="Nosotros">
+            <img class="portada-imagen" src="./img/fotoevento2.jpeg" alt="">
         </div>
     </main>
 
