--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div id="MenuNavegacion" class=" collapse navbar-collapse">
                         <ul class="navbar-nav ms-3">
                             <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#nosotros">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#nos">Nosotros</a></li>
                             <li class="nav-item"><a class="nav-link" href="#eventos">Eventos</a></li>
                             <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                             <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
@@ -42,11 +42,11 @@
         </div>
     </main>
 
-    <div class="nosotros" id="nosotros">
+    <div class="nosotros" id="nos">
         <div class="qstexto">
             <h2>NOSOTROS</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem eaque non impedit sapiente magni ipsam eligendi sint modi architecto eum enim totam assumenda amet repellat placeat molestias porro, consequatur suscipit?</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem eaque non impedit sapiente magni ipsam eligendi sint modi architecto eum enim totam assumenda amet repellat placeat molestias porro, consequatur suscipit?</p>
+            <p>Brindamos Servicios de eventos sociales, casamientos, cumpleaños, fiestas de 15, etc. hace mas de 25 años. Nos ubicamos en capital federal en el barrio de Mataderos. Florida Eventos es el lugar ideal para celebrar eventos sociales y empresariales, disfrutando de la naturaleza y de modernas instalaciones.</p>
+            <p>Nuestros invitados avalan nuestra profesionalidad en las redes sociales, destacándonos por la atención, la calidad y abundancia de la comida. Así tambien como nuestro jardín e instalaciónes.</p>
         </div>
         <div>
             <img class="portada-9" src="./img/galeria_9.jpg" alt="img9">
@@ -56,12 +56,12 @@
     <div class="grid eventos" id="eventos">
         <div class="sociales">
             <h2>EVENTOS SOCIALES</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corrupti labore doloremque explicabo rem veniam quibusdam quisquam provident rerum, sunt cupiditate voluptatibus eum voluptates harum fugiat? Maiores, quas nobis? Dolorem.</p>
+            <p>Organizar un Casamiento, Bar Mitzvah o un Cumpleaños de 15 debe ser uno de los cometidos más emocionantes de tu vida. Te ofrecemos un espacio único dónde vas a poder vivir ese momento tan esperado, rodeado de tus seres queridos.</p>
             <img class="img-social" src="./img/portada_social.jpg">
         </div>
         <div class="corporativo">
             <h2>EVENTOS CORPORATIVOS</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corrupti labore doloremque explicabo rem veniam quibusdam quisquam provident rerum, sunt cupiditate voluptatibus eum voluptates harum fugiat? Maiores, quas nobis? Dolorem.</p>
+            <p>Ofrecemos espacios para pequeños y grandes eventos que se adaptan a todas sus necesidades para el desarrollo de Fiestas de Fin de Año, lanzamientos de productos, desayunos empresariales y todo evento que su empresa necesite.</p>
             <img class="img-corpo" src="./img/portada_corpo.jpg">
         </div>
     </div>
